Fix the non-displayed post-date on mobile

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1770,10 +1770,6 @@ body:not(.post-template) .post-title {
         line-height: 1.65em;
     }
 
-    .post-date {
-        display: none;
-    }
-
     .post-template .post-header {
         margin-bottom: 2rem;
     }
